--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,6 +11,8 @@
   
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root style="z-index: -1;"></app-root>
+  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js" ></script>
+<script  src="https://mediafiles.botpress.cloud/9374424b-1160-4be6-8a69-455bc56c845f/webchat/config.js" defer></script>
 </body>
 </html>
